---
source: crates/forge_services/src/tools/shell.rs
expression: "TempDir::normalize(&actual)"
---
---
command: generate many lines
exit_code: 0
total_stdout_lines: 20
total_stderr_lines: 20
temp_file: [TEMP_DIR]
truncated: true
---
<stdout lines="1-3">
This is line number 1
This is line number 2
This is line number 3
</stdout>
<truncated>...stdout truncated (14 lines not shown)...</truncated>
<stdout lines="18-20">
This is line number 18
This is line number 19
This is line number 20
</stdout>

<stderr lines="1-3">
This is line number 1
This is line number 2
This is line number 3
</stderr>
<truncated>...stderr truncated (14 lines not shown)...</truncated>
<stderr lines="18-20">
This is line number 18
This is line number 19
This is line number 20
</stderr>

<truncated>content is truncated, remaining content can be read from path:[TEMP_DIR]</truncated>
